mettre a jour l'actualité

--- a/acceuil-lmop.html
+++ b/acceuil-lmop.html
@@ -90,35 +90,56 @@
   <div class="content">
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide 11.jpeg" style="width:100%">
+        <img src="image\photos LMOP\Photo prix 2.jpg" style="width:100%" alt="Slide 0">
       </div>
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide2.jpg" style="width:100%">
+        <img src="image\photos LMOP\Attestation Prix.jpeg" style="width:100%" alt="Slide 1">
       </div>
       <div class="mySlides fade">
-         <img src="image\photos LMOP\slide3.jpg" style="width:100%">
+        <img src="image\photos LMOP\slide 0.JPG" style="width:100%" alt="Slide 2">
       </div>
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide 1.jpeg" style="width:100%">
+        <img src="image\photos LMOP\slide2.jpg" style="width:100%" alt="Slide 3">
+      </div>
+         <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 31.JPG" style="width:100%" alt="Slide 4">
       </div>
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide 5 (1).jpeg" style="width:100%">
+         <img src="image\photos LMOP\slide3.jpg" style="width:100%" alt="Slide 5">
+      </div>
+       <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 32.jpg" style="width:100%" alt="Slide 6">
+      </div>
+      <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 1.jpeg" style="width:100%"   alt="Slide 7" >
+      </div>
+      <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 11.jpeg" style="width:100%" alt="Slide 8">
+      </div>
+      <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 5 (1).jpeg" style="width:100%"  alt="Slide 9">
       </div>    
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide 12.jpeg" style="width:100%">
+        <img src="image\photos LMOP\slide 12.jpeg" style="width:100%" alt="Slide 10">
       </div>
       <div class="mySlides fade">
-        <img src="image\photos LMOP\slide 7.jpeg" style="width:100%">
+        <img src="image\photos LMOP\slide 7.jpeg" style="width:100%" alt="Slide 11">
       </div>
+      
+
     <div style="text-align:center; margin-top: 0px;">
       <span class="dot active"></span> 
+      <span class="dot"></span> 
+      <span class="dot"></span> 
       <span class="dot"></span> 
       <span class="dot"></span>       
       <span class="dot"></span>      
       <span class="dot"></span> 
       <span class="dot"></span> 
+      <span class="dot"></span>
       <span class="dot"></span> 
- 
+      <span class="dot"></span> 
+      <span class="dot"></span> 
     </div>
    </div>
 <div class="container">
@@ -169,7 +190,7 @@
       <h1>Laboratoire Matériaux, Organisation et Propriétés </h1>
       <h2>LMOP LR99ES17</h2>
       <p>Le laboratoire Matériaux, Organisation et Propriétés (LMOP) a été créé en 1999 à la Faculté des Sciences de Tunis (Université de Tunis El Manar).</p>
-      <a href="presentation.html" class="btn">En savoir plus</a>
+      <a href="presentation-lmop.html" class="btn">En savoir plus</a>
     </div>
     <div class="img-section">
       <img src="image\photos LMOP\A PROPOS.jpg" alt="Chercheurs en laboratoire">
@@ -190,7 +211,7 @@
      <div class="details">Nanomatériaux Multifonctionnels pour l’Energie et l’Environnement (NanoFor2E)(2023–2024)</div>
    </div>
  </div>
-     <a href ="projet.html" style="text-decoration: none;">  <button class="see-all-button" style="font-family:Merriweather" >Voir tous les projets</button></a>
+     <a href ="projet-lmop.html" style="text-decoration: none;">  <button class="see-all-button" style="font-family:Merriweather" >Voir tous les projets</button></a>
    </section>
  
   
@@ -203,9 +224,11 @@
     <section id="actualites">
       <h2>Actualités</h2>
       <div class="carousel-container">
+        <a href ="actualites-lmop.html" style="text-decoration: none; color:black;" >
         <div class="news-strip" id="newsStrip">
           <!-- Actualités injectées ici -->
           </div>
+          </a>
         </div>
         <a href ="actualites-lmop.html" style="text-decoration: none;"> <button class="see-all-button" style="font-family:Merriweather">Voir toutes les actualités</button></a>
     </section>
@@ -313,6 +336,12 @@ Laboratoire spécialisé dans la synthèse et la caractérisation de matériaux 
   <script src="navbar.js"></script>
    <script>
     const newsData = [
+       {
+        date: "2025-08",
+        title: "Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique, 2024",
+        type: "Prix du Président de la République dans le domaine scientifique et technologique, édition 2024.",
+        summary: "Nous avons l’immense plaisir d’annoncer que le <strong>Laboratoire Matériaux Organisation et Propriétés (LMOP, LR99ES17), rattaché à la Faculté des Sciences de Tunis – Université de Tunis El Manar,</strong> a remporté le <strong> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique</strong>.Cette distinction prestigieuse vient récompenser l’excellence et l’innovation de nos recherches dans les domaines des nanomatériaux, de l’énergie, de l’environnement, ainsi que l’engagement du LMOP dans la formation, l’ouverture internationale et la contribution aux Objectifs de Développement Durable."
+      },
       {
         date: "2025-05-03",
         title: "Soutenance de thèse-Hichem Ben Ameur",
