--- a/actualites-lmop.html
+++ b/actualites-lmop.html
@@ -95,9 +95,10 @@
     <div class="news-container">
       <div class="news-card">
         <div class="news-date"> aout 2025</div>
-        <div class="news-title"> Meilleur Laboratoire de recherche en Tunisie</div>
-        <div class="news-type">[Prix Présidentiel]</div>
-        <div class="news-description">
+        <div class="news-title"> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique, 2024</div>
+        <div class="news-type">[Prix du Président de la République dans le domaine scientifique et technologique, édition 2024.]</div>
+        <div class="news-description">Nous avons l’immense plaisir d’annoncer que le <strong>Laboratoire Matériaux Organisation et Propriétés (LMOP, LR99ES17), rattaché à la Faculté des Sciences de Tunis – Université de Tunis El Manar,</strong> a remporté le <strong> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique</strong>.
+Cette distinction prestigieuse vient récompenser l’excellence et l’innovation de nos recherches dans les domaines des nanomatériaux, de l’énergie, de l’environnement, ainsi que l’engagement du LMOP dans la formation, l’ouverture internationale et la contribution aux Objectifs de Développement Durable.
         </div>
       </div>
 
