mettre a jour index & meta

--- a/actualites-lmop.html
+++ b/actualites-lmop.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Actualités | Laboratoire Matériaux, Organisation et Propriétés </title>
+  <title>Actualités | Laboratoire Matériaux, Organisation et Propriétés </title>  
+  <meta name="description" content="Actualités du LMOP : conférences, soutenances, recrutements et événements scientifiques.">
   <link rel="icon" sizes="16x16" type="image/png" href="image\lmop-icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,14 +44,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -88,7 +89,7 @@
 <body>
   <div class="content">
     <div class="navigation">
-      <a href="acceuil-lmop.html">Accueil &gt; </a> &nbsp;  <p>Actualités</p>
+      <a href="index.html">Accueil &gt; </a> &nbsp;  <p>Actualités</p>
     </div>
 
     <h1>Actualités</h1>
@@ -140,7 +141,7 @@ Cette distinction prestigieuse vient récompenser l’excellence et l’innovati
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
