--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -88,6 +88,48 @@
         </ul>
       </div>
   <div class="content">
+    <div class="container">
+        <h2>Le mot de la Directrice</h2>
+        <p>
+            Depuis sa création en 1999, sous sa forme actuelle, notre laboratoire s’est imposé comme un acteur
+            clé dans la recherche sur les matériaux innovants, en particulier les nanostructures et matériaux
+            intelligents. Fondé en réponse à l’appel à candidature lancé par le Secrétariat à la Recherche
+            Scientifique et à la Technologie, le LMOP constitue l'issue d’une expérience originale, née en 1978
+            par le « Groupe de Microscopie Électronique » initié par le professeur Feu Ali El HILI, puis le
+            regroupement avec deux autres structures de recherche. Sur une tradition d’excellence en physique
+            des solides et en science des matériaux, le LMOP a su évoluer pour répondre aux défis scientifiques
+            et socio-économiques de notre époque.
+        </p>
+        <p>
+            Nos travaux pionniers sur les matériaux de basse dimensionalité (couches minces et ultraminces,
+            nanomatériaux) ont ouvert la voie à des applications originales, notamment dans le stockage
+            magnétique, les capteurs haute performance et les technologies pour l’énergie.
+        </p>
+        <p>
+            Le développement très significatif des travaux menés dans le cadre de collaborations
+            internationales, en évolution continue via des projets communs, et des collaborations nationales
+            autour de thématiques d’intérêt sociétal, traduit l’engagement du LMOP. Aujourd’hui, nous
+            élargissons nos horizons vers les matériaux multiferroïques, la photocatalyse, etc. pour des
+            applications en énergie, environnement et santé, tout en renforçant nos collaborations avec le
+            secteur socio-économique pour une recherche impactante et transformatrice.
+        </p>
+        <p>
+            Notre spécificité réside dans l’interdisciplinarité : nous combinons expérimentation multi échelle,
+            allant de la synthèse à l’identification des propriétés (magnétiques, diélectriques, optiques et
+            physico-chimiques) de matériaux innovants en passant par leur caractérisation, et modélisation
+            pour repousser les frontières de la connaissance.
+        </p>
+        <p>
+            La qualité des travaux du LMOP est démontrée par le nombre croissant des publications dans des
+            revues internationales de renommée. Une attestation de l’excellence de leur formation est traduite
+            par le recrutement récent d’au moins neuf docteurs du LMOP dans l’industrie et des institutions de
+            Recherche & Développement, et de trois Post-Doc dans des universités prestigieuses.
+        </p>
+        <p class="signature">
+            Prof. Najeh THABET MLIKI<br>
+            Directrice du LMOP
+        </p>
+    </div>
     <div class="slideshow-container">
       <div class="mySlides fade">
         <img src="image\photos LMOP\Photo prix 2.jpg" style="width:100%" alt="Slide 0">
@@ -142,48 +184,7 @@
       <span class="dot"></span> 
     </div>
    </div>
-<div class="container">
-        <h2>Le mot de la Directrice</h2>
-        <p>
-            Depuis sa création en 1999, sous sa forme actuelle, notre laboratoire s’est imposé comme un acteur
-            clé dans la recherche sur les matériaux innovants, en particulier les nanostructures et matériaux
-            intelligents. Fondé en réponse à l’appel à candidature lancé par le Secrétariat à la Recherche
-            Scientifique et à la Technologie, le LMOP constitue l'issue d’une expérience originale, née en 1978
-            par le « Groupe de Microscopie Électronique » initié par le professeur Feu Ali El HILI, puis le
-            regroupement avec deux autres structures de recherche. Sur une tradition d’excellence en physique
-            des solides et en science des matériaux, le LMOP a su évoluer pour répondre aux défis scientifiques
-            et socio-économiques de notre époque.
-        </p>
-        <p>
-            Nos travaux pionniers sur les matériaux de basse dimensionalité (couches minces et ultraminces,
-            nanomatériaux) ont ouvert la voie à des applications originales, notamment dans le stockage
-            magnétique, les capteurs haute performance et les technologies pour l’énergie.
-        </p>
-        <p>
-            Le développement très significatif des travaux menés dans le cadre de collaborations
-            internationales, en évolution continue via des projets communs, et des collaborations nationales
-            autour de thématiques d’intérêt sociétal, traduit l’engagement du LMOP. Aujourd’hui, nous
-            élargissons nos horizons vers les matériaux multiferroïques, la photocatalyse, etc. pour des
-            applications en énergie, environnement et santé, tout en renforçant nos collaborations avec le
-            secteur socio-économique pour une recherche impactante et transformatrice.
-        </p>
-        <p>
-            Notre spécificité réside dans l’interdisciplinarité : nous combinons expérimentation multi échelle,
-            allant de la synthèse à l’identification des propriétés (magnétiques, diélectriques, optiques et
-            physico-chimiques) de matériaux innovants en passant par leur caractérisation, et modélisation
-            pour repousser les frontières de la connaissance.
-        </p>
-        <p>
-            La qualité des travaux du LMOP est démontrée par le nombre croissant des publications dans des
-            revues internationales de renommée. Une attestation de l’excellence de leur formation est traduite
-            par le recrutement récent d’au moins neuf docteurs du LMOP dans l’industrie et des institutions de
-            Recherche & Développement, et de trois Post-Doc dans des universités prestigieuses.
-        </p>
-        <p class="signature">
-            Prof. Najeh THABET MLIKI<br>
-            Directrice du LMOP
-        </p>
-    </div>
+
     <!-- À PROPOS -->
       <div class="banner">
     <div class="text-section">
@@ -292,7 +293,7 @@ Laboratoire spécialisé dans la synthèse et la caractérisation de matériaux 
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
