--- a/manifestation-lmop.html
+++ b/manifestation-lmop.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-<title> Manifestations | Laboratoire Matériaux, Organisation et Propriétés </title>  
+<title> Manifestations | Laboratoire Matériaux, Organisation et Propriétés </title>
+<meta name="description" content="Manifestations scientifiques organisées ou coorganisées par le LMOP : colloques, journées d’étude et conférences internationales.">
   <link rel="icon" sizes="16x16" type="image/png" href="image\lmop-icon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,14 +44,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -86,7 +87,7 @@
       </div>
 <div class="content">
        <div class="navigation">
-     <a href="acceuil-lmop.html">Acceuil &gt; </a> &nbsp; <p>Les Manifestations et les Jounrées Scientifiques de LMOP</p></div>
+     <a href="index.html">Acceuil &gt; </a> &nbsp; <p>Les Manifestations et les Jounrées Scientifiques de LMOP</p></div>
      <h1>Les Manifestations et les Jounrées Scientifiques de LMOP</h1>
      <div class="manifestations-container">
       <div class="year-section">
@@ -196,7 +197,7 @@
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
