--- a/projet-lmop.html
+++ b/projet-lmop.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projets | Laboratoire Matériaux, Organisation et Propriétés </title>  
   <link rel="icon" sizes="16x16" type="image/png" href="image\lmop-icon.png">
+  <meta name="description" content="Projets scientifiques en cours au LMOP : énergie, environnement, nanomatériaux et applications avancées.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
@@ -43,14 +44,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -86,7 +87,7 @@
       </div>
     <div class="content">
     <div class="navigation">
-        <a href="acceuil-lmop.html">Acceuil &gt; </a> &nbsp; <p>Les projets de Recherche de LMOP</p></div>
+        <a href="index.html">Acceuil &gt; </a> &nbsp; <p>Les projets de Recherche de LMOP</p></div>
     <h1>Les projets de Recherche de LMOP</h1>
 <div class="controls">
   <input type="text" id="searchInput" placeholder="Rechercher..." oninput="filterAndPaginate()">
@@ -173,7 +174,7 @@ Laboratoire spécialisé dans la synthèse et la caractérisation de matériaux 
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
