--- a/publications-lmop.html
+++ b/publications-lmop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Publications Scientifiques | Laboratoire Matériaux, Organisation et Propriétés </title>  
   <link rel="icon" sizes="16x16" type="image/png" href="image\lmop-icon.png">
-
+    <meta name="description" content="Liste des publications scientifiques du LMOP classées par année, dans des revues internationales reconnues.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Vos styles existants -->
   <link rel="stylesheet" href="styleNavbar.css">
@@ -53,14 +53,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -96,7 +96,7 @@
       </div>
   <main>
        <div class="navigation">
-       <a href="acceuil-lmop.html">Acceuil &gt; </a> &nbsp; <p>Liste des Articles de Recherche </p></div>
+       <a href="index.html">Acceuil &gt; </a> &nbsp; <p>Liste des Articles de Recherche </p></div>
        <h1>Liste des Articles de Recherche</h1>
     <table id="articlesTable" class="display">
       <thead>
@@ -1214,7 +1214,7 @@
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
