--- a/equipe-lmop.html
+++ b/equipe-lmop.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" sizes="16x16" type="image/png" href="image\lmop-icon.png">
+    <meta name="description" content="Découvrez l’équipe de recherche du LMOP : enseignants-chercheurs, doctorants, post-doctorants et collaborateurs.">
   <title>Équipe de Laboratoire | Laboratoire Matériaux, Organisation et Propriétés</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,14 +43,14 @@
       </div>
       <div class="navbar-sub">
         <div>
-          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='acceuil-lmop.html'">
+          <img src="image/lmop.png" alt="Logo" class="logo-img-lmop" onclick="window.location.href='index.html'">
         </div>
         <!-- Bouton Hamburger -->
         <button class="menu-toggle-sub">
           <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-links">
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
             <ul>
@@ -84,7 +85,7 @@
         </ul>
       </div>
     <div class="navigation">
-      <a href="acceuil-lmop.html">Acceuil &gt; </a> &nbsp; <p>Les équipes de LMOP</p></div>
+      <a href="index.html">Acceuil &gt; </a> &nbsp; <p>Les équipes de LMOP</p></div>
       <h1>Les équipes de LMOP</h1></div>
 
 <div class="layout">
@@ -837,7 +838,7 @@
       <div class="footer-section">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="acceuil-lmop.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="presentation-lmop.html">Présentation</a></li>
           <li><a href="equipe-lmop.html">Équipes</a>
           <li><a href="projet-lmop.html">Projets</a></li>
