--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
         <img src="image\photos LMOP\Attestation Prix.jpeg" style="width:100%" alt="Slide 1">
       </div>
       <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 8.jpeg" style="width:100%" alt="Slide 11">
+      </div>
+      <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 9.jpeg" style="width:100%" alt="Slide 11">
+      </div>
+      <div class="mySlides fade">
+        <img src="image\photos LMOP\slide 10.jpeg" style="width:100%" alt="Slide 11">
+      </div>
+      <div class="mySlides fade">
         <img src="image\photos LMOP\slide 0.JPG" style="width:100%" alt="Slide 2">
       </div>
       <div class="mySlides fade">
@@ -167,7 +176,8 @@
       <div class="mySlides fade">
         <img src="image\photos LMOP\slide 7.jpeg" style="width:100%" alt="Slide 11">
       </div>
-      
+
+
 
     <div style="text-align:center; margin-top: 0px;">
       <span class="dot active"></span> 
@@ -344,24 +354,18 @@ Laboratoire spécialisé dans la synthèse et la caractérisation de matériaux 
         summary: "Nous avons l’immense plaisir d’annoncer que le <strong>Laboratoire Matériaux Organisation et Propriétés (LMOP, LR99ES17), rattaché à la Faculté des Sciences de Tunis – Université de Tunis El Manar,</strong> a remporté le <strong> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique</strong>.Cette distinction prestigieuse vient récompenser l’excellence et l’innovation de nos recherches dans les domaines des nanomatériaux, de l’énergie, de l’environnement, ainsi que l’engagement du LMOP dans la formation, l’ouverture internationale et la contribution aux Objectifs de Développement Durable."
       },
       {
+        date: "03-09-2025",
+        title: "Soutenance d’HDR en Physique – Dr Ikbel Mallek-Zouari",
+        type: "Habilitation à Diriger des Recherches",
+        summary: "Le Dr Ikbel Mallek-Zouari, Maître Assistante à l’ISETCOM et membre du <strong>Laboratoire Matériaux Organisation et Propriétés (LMOP, LR99ES17)</strong>, a soutenu son Habilitation à Diriger des Recherches en Physique le <strong>3 septembre 2025</strong> à la Faculté des Sciences de Tunis. Son travail porte sur les <em>multiferroïques à base de ferrites de bismuth pour l’environnement : de la synthèse à l’application</em>."
+      },
+      {
         date: "2025-05-03",
         title: "Soutenance de thèse-Hichem Ben Ameur",
         type: "événement",
         summary: "Félicitations à Hichem Ben Ameur pour la soutenance réussie de sa thèse avec la mention très Honorable!"
       },
-      {
-        date: "2024-10-28",
-        title: "International Conference on Advanced Materials Characterizations And Applications (ICAMCA-2024)",
-        type: "événement",
-        summary: "Conférence international organisé par LR99ES17 (FST) en collaboration avec les laboratoires LaMMA (FSSfax) et LaPhyMNE (FSGabès)"
-      },
-      {
-        date: "2024-10-02",
-        title: "Poste doctoral ouvert",
-        type: "recrutement",
-        summary: "Programme d’Encouragement des Jeunes Chercheurs"
-      },
-    ];
+          ];
 
     const strip = document.getElementById("newsStrip");
 
