--- a/manifestation-lmop.html
+++ b/manifestation-lmop.html
@@ -93,13 +93,21 @@
       <div class="year-section">
       <div class="year-label"><span>2025</span></div>
       <div class="posters-grid">
-        <div class="poster-card" style="height:650px;">
-          <img src="manifestations\2025\Henda ElFekih-Conférence le 19 février 25 (4)_page-0001.jpg" alt="Poster 1 2025" style="height:600px;">
+        <div class="poster-card">
+          <img src="manifestations\2025\Henda ElFekih-Conférence le 19 février 25 (4)_page-0001.jpg" alt="Poster 1 2025">
           <div class="poster-title">Conférence Henda ElFekih</div>
         </div>
         <div class="poster-card">
-          <img src="manifestations\2025\poster QYB event 2025.png" alt="Poster 2 2025" style="height:600px;">
+          <img src="manifestations\2025\poster QYB event 2025.png" alt="Poster 2 2025">
           <div class="poster-title">Quantumcode Fusion: Python Meets Qiskit</div>
+        </div>
+        <div class="poster-card">
+          <img src="manifestations\2025\The nabel quantum Breakthrough.jfif" alt="Poster 3 2025">
+          <div class="poster-title">The Nabel Quantum Breakthrough</div>
+        </div>
+        <div class="poster-card">
+          <img src="manifestations\2025\Microscopies électroniques_Conferences.pdf.png" alt="Poster 4 2025">
+          <div class="poster-title">Microscopies électroniques Conferences</div>
         </div>
       </div>
     <div class="year-section">
@@ -160,13 +168,13 @@
     <div class="year-section">
       <div class="year-label"><span>2021</span></div>
       <div class="posters-grid"  >
-        <div class="poster-card" style="height:650px;">
+        <div class="poster-card">
           
-          <img src="manifestations\2021\poster 1 2021 .jpg" alt="Poster 1 2021" style="height:600px;">
+          <img src="manifestations\2021\poster 1 2021 .jpg" alt="Poster 1 2021" style="height:750px; ">
           <div class="poster-title">Journée "Au Fontières des displines"</div>
         </div>
         <div class="poster-card">
-          <img src="manifestations\2021\poster 2 2021.jpg" alt="Poster 1 2021" style="height:600px;">
+          <img src="manifestations\2021\poster 2 2021.jpg" alt="Poster 1 2021" style="height:750px;">
           <div class="poster-title">Meeting PRF</div>
         </div>
       </div>
