--- a/actualites-lmop.html
+++ b/actualites-lmop.html
@@ -98,12 +98,22 @@
         <div class="news-date"> aout 2025</div>
         <div class="news-title"> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique, 2024</div>
         <div class="news-type">[Prix du Président de la République dans le domaine scientifique et technologique, édition 2024.]</div>
+        <img src="image\photos LMOP\Photo prix 2.jpg" 
+       alt="Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique" 
+       class="news-image"
+       onclick="openLightbox(this.src)" />
+       
         <div class="news-description">Nous avons l’immense plaisir d’annoncer que le <strong>Laboratoire Matériaux Organisation et Propriétés (LMOP, LR99ES17), rattaché à la Faculté des Sciences de Tunis – Université de Tunis El Manar,</strong> a remporté le <strong> Prix Présidentiel du Meilleur Laboratoire de Recherche Scientifique</strong>.
-          Cette distinction prestigieuse vient récompenser l’excellence et l’innovation de nos recherches dans les domaines des nanomatériaux, de l’énergie, de l’environnement, ainsi que l’engagement du LMOP dans la formation, l’ouverture internationale et la contribution aux Objectifs de Développement Durable.
-        </div>
-      </div>
+      <!-- Cette distinction prestigieuse vient récompenser l’excellence et l’innovation de nos recherches dans les domaines des nanomatériaux,
+        de l’énergie, de l’environnement, ainsi que l’engagement du LMOP dans la formation, l’ouverture internationale et la contribution aux Objectifs de Développement Durable.
+        -->
+      
+      <br> <br>
+      <a href="actualité prix laboratoire.html" target="_blank" class="news-link">En savoir plus</a>
+    </div>
+  </div>
 
-      <div class="news-card">
+  <div class="news-card">
   <div class="news-date">03 Septembre 2025</div>
   <div class="news-title">Soutenance d’Habilitaion Universitaire en Physique – Dr Ikbel Mallek-Zouari</div>
   <div class="news-type">[Habilitation à Diriger des Recherches – Physique]</div>
@@ -125,16 +135,19 @@
   </div>
 </div>
 
-<!-- Lightbox simple -->
-<div id="lightbox" style="display:none;" onclick="this.style.display='none'">
-  <img id="lightbox-img" />
-</div>
 
       <div class="news-card">
         <div class="news-date">03 mai 2025</div>
         <div class="news-title">Soutenance de thèse–Hichem Ben Ameur</div>
         <div class="news-type">[événement]</div>
-        <div class="news-description">Félicitations à Hichem Ben Ameur pour la soutenance réussie de sa thèse avec la mention très Honorable !</div>
+        <img src="image\soutenane hichem.jpg" 
+        alt="Soutenance de thèse–Hichem Ben Ameur" 
+        class="news-image"
+        onclick="openLightbox(this.src)" />
+      <div class="news-description">Félicitations à Hichem Ben Ameur pour la soutenance réussie de sa thèse avec la mention très Honorable !
+          <br><br>
+          <a href="actualité hichem.html" target="_blank" class="news-link">En savoir plus</a>
+      </div>
       </div>
 
       <div class="news-card">
